--- a/translations/messages.ps.po
+++ b/translations/messages.ps.po
@@ -4493,7 +4493,7 @@ msgstr ""
 msgid "This class isn't subscribed in a course"
 msgstr ""
 
-msgid "tool"
+msgid "Tool"
 msgstr ""
 
 msgid "Number of items"
