--- a/translations/messages.sr.po
+++ b/translations/messages.sr.po
@@ -4501,7 +4501,7 @@ msgstr "Ovaj korisnik nije prijavljen u razred"
 msgid "This class isn't subscribed in a course"
 msgstr "Ovaj razred nije prijavljen na kurs"
 
-msgid "tool"
+msgid "Tool"
 msgstr "alat"
 
 msgid "Number of items"
