--- a/translations/messages.zh_TW.po
+++ b/translations/messages.zh_TW.po
@@ -4500,7 +4500,7 @@ msgstr "這使用者沒有加入班級"
 msgid "This class isn't subscribed in a course"
 msgstr "這班級沒有選修課程"
 
-msgid "tool"
+msgid "Tool"
 msgstr "工具"
 
 msgid "Number of items"
