--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -14499,12 +14499,6 @@ msgstr "Please go back to Step"
 msgid "The upgrade script will recover and update the Chamilo database(s). In order to do this, this script will use the databases and settings defined below. Because our software runs on a wide range of systems and because all of them might not have been tested, we strongly recommend you do a full backup of your databases before you proceed with the upgrade!"
 msgstr "The upgrade script will recover and update the Chamilo database(s). In order to do this, this script will use the databases and settings defined below. Because our software runs on a wide range of systems and because all of them might not have been tested, we strongly recommend you do a full backup of your databases before you proceed with the upgrade!"
 
-msgid "MBString extension not available"
-msgstr "MBString extension not available"
-
-msgid "MySQL extension not available"
-msgstr "MySQL extension not available"
-
 msgid "Optional parameters"
 msgstr "Optional parameters"
 
@@ -18125,15 +18119,6 @@ msgstr "Welcome to the Chamilo installer"
 
 msgid "Your PHP version does not match the requirements for this software. Please check you have the latest version, then try again."
 msgstr "Your PHP version does not match the requirements for this software. Please check you have the latest version, then try again."
-
-msgid "Sessions extension not available"
-msgstr "Sessions extension not available"
-
-msgid "Zlib extension not available"
-msgstr "Zlib extension not available"
-
-msgid "PCRE extension not available"
-msgstr "PCRE extension not available"
 
 msgid "To social group"
 msgstr "To social group"
@@ -29434,3 +29419,42 @@ msgstr "Inactive"
 
 msgid "Mandatory fields"
 msgstr "Mandatory fields"
+
+msgid "%s extension not available"
+msgstr "%s extension not available"
+
+msgid "Unknown"
+msgstr "Unknown"
+
+msgid "The following users have accessed one or more courses without being officially registered. They generated activity in open courses but are not listed in the course subscription tables."
+msgstr "The following users have accessed one or more courses without being officially registered. They generated activity in open courses but are not listed in the course subscription tables."
+
+msgid "Users active in open courses (not enrolled)"
+msgstr "Users active in open courses (not enrolled)"
+
+msgid "Show/Hide users active in open courses (not enrolled)"
+msgstr "Show/Hide users active in open courses (not enrolled)"
+
+msgid "Unsubscriptions"
+msgstr "Unsubscriptions"
+
+msgid "Subscriptions vs unsubscriptions, by day"
+msgstr "Subscriptions vs unsubscriptions, by day"
+
+msgid "Quarterly report"
+msgstr "Quarterly report"
+
+msgid "Course/Session subscriptions, by day"
+msgstr "Course/Session subscriptions, by day"
+
+msgid "New users registrations"
+msgstr "New users registrations"
+
+msgid "File imported just users that are not registered"
+msgstr "File imported just users that are not registered"
+
+msgid "Available groups"
+msgstr "Available groups"
+
+msgid "Total groups"
+msgstr "Total groups"
